--- a/index.html
+++ b/index.html
@@ -1,29 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Abhishek Kumar</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, Welcome!</h1> 
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="ak109@rice.edu">email</a></li>
-        		<li><a href="https://github.com/kumarabhish3k">github.com/kumarabhish3k</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Abhishek Kumar
+---
+<div class="blurb">
+<h1>Hi there, Welcome!</h1> 
+</div><!-- /.blurb -->
